2008/07/09
	50. Change dependency in unitTesting (testKwsDirectPath -> testKineoWorks).
2008/07/03
	49. Fix Typo in documentation.
2008/07/08
	48. Remove useless method CflicDirectPath::init.
2008/07/03
	47. Modification in class CkwsPlusDPLinear.
2008/07/01
	46. Make access functions to velocity const
	
2008/06/27

	45. Correction of a bug in copy of CkwsPlusDirectPath.
	44. Added computation of velocity along CflicDirectPath direct path.
	
2008/06/24

	43. In hppVisRdmBuilder::buildOneStep, if shooter fails, return KD_ERROR.
	
2008/06/23
		
	42. Fixed a bug in copy constructor of CflicDirectPath.
	
2008/06/18

	41. Fix some bugs in Local Trees.
	40. Added node and edge classes with additionnal informations.
	39. Added template builder and shooter that sends additionnal
	    notifications.
	
2008/06/16
	38. Implemented a roadmap builder delegate to interrupt a
	    roadmap builder during path planning.
	
2008/06/12	kwsPlus release 1.4.1
	
	37. UnitTesting is now compiled on demand configure --enable-unitTesting.
	36. Added diffusion shooter factory.
	35. Added diffusion node picker factory.
	
2008/05/13	kwsPlus release 1.4
	
	34. Added distance function factory.
        33. Added some debugging code in flicDistance.cpp and flicDistance.h.
        32. Corrected some warning and removed useless KWSPRECOND() in
            flicDirectPath.cpp.
        31. Adaptation to KPP version 2.04.500.

2008/04/24      kwsPlus release 1.3.2

        36. Fix more memory leaks in flicDistance.

2008/04/24      kwsPlus release 1.3.1

        35. Fix memory leak in flicDistance.
        34. correct a bug in kitMat3.h : disable multiple inclusion
        33. If CXXFLAGS and CFLAGS are not defined at configuration, they
            are set to "-Wall".
        32. Removed unitTesting program to test projection constraint.
        30. Correction of numerous warnings in documentation generation.

2008/04/04      kwsPlus release 1.3

        29. Added steering method factories.